Aggiunto resoconto guadagno settimanale

--- a/src/analisiRequisiti/operazioni_tipiche.tex
+++ b/src/analisiRequisiti/operazioni_tipiche.tex
@@ -3,7 +3,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} Operazione & Frequenza \\
 		\midrule
-		Vendita ordine & 1000 volte al giorno\\
+		Vendita ordine & 50 volte al giorno\\
 		\midrule
 		Acquisto materie prime & 2 volte all'anno\\
 		\midrule
@@ -16,6 +16,8 @@
 		Inserimento turno & 30 volte al giorno\\
 		\midrule
 		Inserimento acquirente & 1 volta al mese\\
+		\midrule
+		Resoconto guadagno & 1 volta a settimana\\
 		\bottomrule
 	\end{tabular}
 \end{center}
