--- a/src/progettazioneConcettuale/analisi_relazioni.tex
+++ b/src/progettazioneConcettuale/analisi_relazioni.tex
@@ -111,7 +111,7 @@
 \end{itemize}
 
 \begin{itemize}
-	\item \underline{BottigliaDiVino - Ordine}: \textbf{Contenuto}*
+	\item \underline{BottigliaDiVino - Ordine}: \textbf{Dettaglio}*
 	
 	\begin{itemize}
 		\item Un tipo di bottiglia di vino può appartenere a nessuno o pù ordini di vendita (0,N)
