--- a/src/progettazioneLogica/accorpamento_entita.tex
+++ b/src/progettazioneLogica/accorpamento_entita.tex
@@ -1,7 +1,12 @@
+\textbf{\large{Informazione}}\\
+Si è deciso di aggiungere l'entità \emph{Informazione} perchè sembrava la scelta più consona raggruppare le informazioni comuni dell'entità \emph{Privato ed Azienda}. L'entità \emph{Informazione} avrà quindi gli attributi \textbf{ID (VARCHAR), Email (VARCHAR), Telefono (VARCHAR), Nome (VARCHAR)}.
+
+\begin{flushleft}
 \textbf{\large{Indirizzo}}\\
-Si è deciso di aggiungere l'entità \emph{Indirizzo} perchè sembrava la scelta più consona raggruppare le informazioni dell'attributo \textbf{Indirizzo} di \emph{Acquirente e Vigneto}. L'entità \emph{Indirizzo} avrà quindi gli attributi \textbf{ID (VARCHAR), Stato (VARCHAR), Città (VARCHAR), Provincia (VARCHAR), CAP (INTEGER), Via (VARCHAR), NumCivico (INTEGER)}.
+Si è deciso di aggiungere l'entità \emph{Indirizzo} perchè sembrava la scelta più consona raggruppare le informazioni dell'attributo \textbf{Indirizzo} di \emph{Informazione e Vigneto}. L'entità \emph{Indirizzo} avrà quindi gli attributi \textbf{ID (VARCHAR), Stato (VARCHAR), Città (VARCHAR), Provincia (VARCHAR), CAP (INTEGER), Via (VARCHAR), NumCivico (INTEGER)}.
+\end{flushleft}
 
 \begin{flushleft}
 \textbf{\large{Date}}\\
-Qualsiasi \emph{data} e' stata trasformata in un attributo singolo visto che viene rappresentato con il tipo \textbf{DATE}. In particolare si è deciso di modificare l'attributo \textbf{DataUltManutenzione} dell'entità \emph{Macchinario} in una chiave referenziale verso l'attributo \textbf{ID} della relazione \emph{Manutenzione}, visto che è significativo risalire ai dati dell'ultima manutenzione, in particolare alla \emph{data}. 
+Qualsiasi \emph{data} e' stata trasformata in un attributo singolo visto che viene rappresentato con il tipo \textbf{DATE}.
 \end{flushleft}
