--- a/src/progettazioneLogica/accorpamento_entita.tex
+++ b/src/progettazioneLogica/accorpamento_entita.tex
@@ -7,6 +7,6 @@ Si è deciso di aggiungere l'entità \emph{Indirizzo} perchè sembrava la scelta
 \end{flushleft}
 
 \begin{flushleft}
-\textbf{\large{Date}}\\
-Qualsiasi \emph{data} e' stata trasformata in un attributo singolo visto che viene rappresentato con il tipo \textbf{DATE}.
+\textbf{\large{Date, InizioTurno, FineTurno}}\\
+\textbf{InizioTurno, FineTurno} e qualsiasi \emph{Data} e' stata trasformata in un attributo singolo visto che viene rappresentato con il tipo \textbf{DATE} o \textbf{DATETIME}.
 \end{flushleft}
