--- a/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
+++ b/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
@@ -8,13 +8,13 @@ Lo schema concenttuale presenta molte generalizzazioni. Si procede all'analisi d
 
 \begin{flushleft}
 	\textbf{\large{Acquirente}}\\
-	L'entità \emph{Acquirente} presenta un attrinuto ed una relazione. A loro volta anche le entità figlie \emph{Azienda e Privato} hanno attributi significativi. Per ristrutturare questa generalizzazione si è deciso di creare due relazioni differenti. La prima si chiama \textbf{IsAzienda} dove la cardinalità da \emph{Azienda ad Acquirente} è (1,1) perchè un'azienda è sempre un'acquirente, invece da \emph{Acquirente ad Azienda} è (0,1) perchè non sempre un acquirente è un'azienda.
-	La seconda relazione si chiama \textbf{IsPrivato} dove le cardinalità sono rappresentate come fra \emph{Azienda ed Acquirente}. Le entità \emph{Azienda e Privato} avranno sempre gli attributi visti in precedenza.
+	L'entità \emph{Acquirente} presenta un attributo ed una relazione. A loro volta anche le entità figlie \emph{Azienda e Privato} hanno attributi significativi. Per ristrutturare questa generalizzazione si è deciso di creare due relazioni differenti. La prima si chiama \textbf{IsAzienda} dove la cardinalità da \emph{Azienda ad Acquirente} è (0,1) perchè un'azienda puo' non essere un nostro acquirente, invece da \emph{Acquirente ad Azienda} è (0,1) perchè non sempre un acquirente è un'azienda.
+	La seconda relazione si chiama \textbf{IsPrivato} dove la cardinalita' da \emph{Acquirente a Privato} e' (0,1) perchè non sempre un acquirente è un privato, invece da \emph{Privato ad Acquirente} è (1,1) perchè un privato e' sempre un nostro acquirente. Le entità \emph{Azienda e Privato} avranno sempre gli attributi visti in precedenza.
 \end{flushleft}
 
 \begin{flushleft}
 	\textbf{\large{Azienda}}\\
-	L'entità \emph{Azienda} può essere un negozio interno della cantina. Per ristrutturare questa generalizzazione si è deciso di aggiungere una relazione chiamata \emph{IsNegozioInterno} con cardinalità (0,1) da \emph{Azienda a NegozioInterno} perchè un'azienda può o non essere un \emph{NegozioInterno}. La cardinalità da \emph{NegozioInterno a Azienda} è (1,1) perchè un negozio interno è anch'egli un'azienda. Si è scelta questa strada perchè il carico di aziende che non sono negozi interni è maggiore rispetto a quelle che sono negozi interni, perciò è stato escluso l'aggiunta di un attributo in \emph{Azienda} che identificava se quest'ultima era anche negozio interno. La stessa identica cosa è stata fatta per la generalizzazione con \emph{Fornitore}. Invece per la generalizzazione con \emph{AzManutenzione}, si è deciso di togliere \emph{AzManutenzione} e di non specificare se un'azienda è di per se un' azienda di manutenzione, ma di ricavarlo tramite la relazione \emph{Manutenzione}.
+	L'entità \emph{Azienda} può essere un negozio interno della cantina, un fornitore o un'azienda di manutenzione. Per ristrutturare questa generalizzazione si è deciso di aggiungere una relazione chiamata \emph{IsNegozioInterno} con cardinalità (0,1) da \emph{Azienda a NegozioInterno} perchè un'azienda può o non essere un \emph{NegozioInterno}. La cardinalità da \emph{NegozioInterno a Azienda} è (1,1) perchè un negozio interno è anch'egli un'azienda. Si è scelta questa strada perchè il carico di aziende che non sono negozi interni è maggiore rispetto a quelle che sono negozi interni, perciò è stato escluso l'aggiunta di un attributo in \emph{Azienda} che identificava se quest'ultima era anche negozio interno. La stessa identica cosa è stata fatta per la generalizzazione con \emph{Fornitore}. Invece per la generalizzazione con \emph{AzManutenzione}, si è deciso di togliere \emph{AzManutenzione} e di non specificare se un'azienda è di per se un' azienda di manutenzione, ma di ricavarlo tramite la relazione \emph{Manutenzione}.
 \end{flushleft}
 
 \begin{flushleft}
